2002-05-08  Jim Wilson  <wilson@redhat.com>

	* config/tc-i960.c (md_estimate_size_before_relax): Return size of
	current variable part of frag.

2002-05-08  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mmix.c: Fix formatting.
	* config/tc-mmix.h: Likewise.

2002-05-08  Alan Modra  <amodra@bigpond.net.au>

	* configure: Regenerate.

2002-05-07  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-m68k.c: Fix formatting.

2002-05-07  Federico G. Schwindt <fgsch@olimpo.com.br>

	* Makefile.am: Honour DESTDIR.
	* Makefile.in: Regenerate.

2002-05-06  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-ia64.c: Fix formatting.
	* config/tc-ia64.h: Likewise.

2002-05-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mips.c: Fix formatting.
	* config/tc-s390.c: Likewise.
	* config/tc-s390.h: Likewise.

2002-05-03  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-s390.c (md_gather_operands): Emit dwarf2 line-number
	information for instructions.

2002-05-02  Kazu Hirata  <kazu@cs.umass.edu>

	* as.h: Fix formatting.
	* cgen.c: Likewise.
	* cgen.h: Likewise.
	* dwarf2dbg.c: Likewise.
	* frags.h: Likewise.
	* gasp.c: Likewise.
	* macro.c: Likewise.
	* read.c: Likewise.
	* stabs.c: Likewise.
	* symbols.c: Likewise.

2002-05-02  Alan Modra  <amodra@bigpond.net.au>

	* app.c (mri_pseudo): Only declare for TC_M68K.

	* config/tc-ppc.c (mapping): Map sectoff to BFD_RELOC_16_BASEREL.
	(ppc_elf_validate_fix): Replace BFD_RELOC_32_BASEREL with
	BFD_RELOC_16_BASEREL.
	(md_assemble): Likewise.
	(md_apply_fix3): Likewise.

2002-05-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arm.c (thumb_add_sub): Do not convert a subtract of
	zero into an add of zero - it is not the same.

2002-05-01  Arati Dikey <aratid@kpit.com>

	* tc-sh.c (get_specific): Generate warning if the same
	destination register is used in parallel instructions.

2002-05-01  Andrew Macleod  <amacleod@cygnus.com>

	* config/tc-i386.c (extra_symbol_chars): Add '[' to the list.
